--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,6 +1,6 @@
-<div class="registration-container">
+<div class="auth-form-container">
   <form
-    class="registration-form"
+    class="auth-form"
     [formGroup]="registrationForm"
     (ngSubmit)="onSubmit()"
   >
