add request and verify reset password token component; implement form and validation; update routing and styles

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
       <div class="password-text">
         <label for="password">Password</label>
         <div class="forgot-password">
-          <a href="#">Forgot Password?</a>
+          <a routerLink="/reset-password-request">Forgot Password?</a>
         </div>
       </div>
       <div class="password-container">
