--- a/src/app/components/reset-password/reset-password-request/reset-password-request.component.html
+++ b/src/app/components/reset-password/reset-password-request/reset-password-request.component.html
@@ -1,1 +1,44 @@
-<p>reset-password-request works!</p>
+<div class="auth-form-container">
+  <form
+    class="auth-form"
+    [formGroup]="resetPasswordRequestForm"
+    (ngSubmit)="onSubmit()"
+  >
+    <h2>Reset Password Request</h2>
+    <!-- Email Field -->
+    <div class="form-group">
+      <label for="email">Enter your email</label>
+      <input
+        type="email"
+        id="email"
+        formControlName="email"
+        placeholder="Enter your email address"
+      />
+      <div
+        class="error-message"
+        *ngIf="
+          resetPasswordRequestForm.get('email')?.invalid &&
+          resetPasswordRequestForm.get('email')?.touched
+        "
+      >
+        <small
+          *ngIf="resetPasswordRequestForm.get('email')?.errors?.['required']"
+        >
+          Email is required.
+        </small>
+        <small *ngIf="resetPasswordRequestForm.get('email')?.errors?.['email']">
+          Please enter a valid email. Example: example&#64;domain.com
+        </small>
+      </div>
+    </div>
+
+    <!-- Submit Button -->
+    <button
+      type="submit"
+      class="btn-submit"
+      [disabled]="resetPasswordRequestForm.invalid"
+    >
+      Send Token
+    </button>
+  </form>
+</div>
