--- a/src/app/components/reset-password/verify-reset-password-token/verify-reset-password-token.component.html
+++ b/src/app/components/reset-password/verify-reset-password-token/verify-reset-password-token.component.html
@@ -4,7 +4,7 @@
     [formGroup]="verifyResetPasswordTokenForm"
     (ngSubmit)="onSubmit()"
   >
-    <h2>Reset Your Password</h2>
+    <h2>Verify Reset Password Token</h2>
     <!-- Email Field -->
     <div class="form-group">
       <div class="label-link">
