refactor reset password flow; update styles and routing

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -54,5 +54,11 @@
     </button>
 
     <p>Don't have an account? <a routerLink="/register">Signup!</a></p>
+    <p>
+      <small
+        >Email Not Confirmed?
+        <a routerLink="/confirm-email">Confirm it Now!</a></small
+      >
+    </p>
   </form>
 </div>
