--- a/src/app/components/reset-password/reset-password-request/reset-password-request.component.html
+++ b/src/app/components/reset-password/reset-password-request/reset-password-request.component.html
@@ -4,10 +4,15 @@
     [formGroup]="resetPasswordRequestForm"
     (ngSubmit)="onSubmit()"
   >
-    <h2>Reset Password Request</h2>
+    <h2>Verify Reset Password Token</h2>
     <!-- Email Field -->
     <div class="form-group">
-      <label for="email">Enter your email</label>
+      <div class="label-link">
+        <label for="email">Enter your email</label>
+        <a (click)="onSendToken()" class="link" *ngIf="tokenSent"
+          >Resend Token</a
+        >
+      </div>
       <input
         type="email"
         id="email"
@@ -26,8 +31,36 @@
         >
           Email is required.
         </small>
-        <small *ngIf="resetPasswordRequestForm.get('email')?.errors?.['email']">
+        <small
+          *ngIf="resetPasswordRequestForm.get('email')?.errors?.['email']"
+        >
           Please enter a valid email. Example: example&#64;domain.com
+        </small>
+      </div>
+    </div>
+    <a (click)="onSendToken()" class="btn-submit" *ngIf="!tokenSent">
+      Send Token
+    </a>
+    <!-- token field -->
+    <div class="form-group" *ngIf="tokenSent">
+      <label for="token">Enter the token</label>
+      <input
+        type="text"
+        id="token"
+        formControlName="token"
+        placeholder="Enter the token sent to your email"
+      />
+      <div
+        class="error-message"
+        *ngIf="
+          resetPasswordRequestForm.get('token')?.invalid &&
+          resetPasswordRequestForm.get('token')?.touched
+        "
+      >
+        <small
+          *ngIf="resetPasswordRequestForm.get('token')?.errors?.['required']"
+        >
+          Token is required.
         </small>
       </div>
     </div>
@@ -37,8 +70,9 @@
       type="submit"
       class="btn-submit"
       [disabled]="resetPasswordRequestForm.invalid"
+      *ngIf="tokenSent"
     >
-      Send Token
+      Verify Token
     </button>
   </form>
 </div>
