update page title to WriteSpace; change the icon

--- a/src/app/components/confirm-email/confirm-email.component.html
+++ b/src/app/components/confirm-email/confirm-email.component.html
@@ -25,9 +25,9 @@
     </button>
 
     <p *ngIf="showResendForm" class="resend">
-      <button type="button" (click)="onResendRequest()">
+      <a (click)="onResendRequest()">
         Resend Confirmation Email
-      </button>
+      </a>
     </p>
   </form>
 </div>
