--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,6 +103,8 @@
       a {
         color: #0066cc;
         text-decoration: none;
+        font-size: smaller;
+        cursor: pointer;
         &:hover {
           text-decoration: underline;
         }
