add profile component; implement header with authentication; update app layout and styles; integrate ngx-cookie-service, implement logout functionality.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 * {
+  margin: 0px;
+  padding: 0xpx;
   box-sizing: border-box;
+}
+main {
+  min-height: 90vh;
 }
 .password-container {
   position: relative;
