--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
       <li (click)="isMenuOpen = false"><a routerLink="/home">Home</a></li>
       <li (click)="isMenuOpen = false"><a routerLink="/about">Search</a></li>
       <li (click)="isMenuOpen = false">
-        <a routerLink="/contact"><i class="fa fa-user-tie"></i> Profile</a>
+        <a routerLink="/contact"><i class="fa fa-user-tie"></i> {{ firstName || 'Profile' }}</a>
       </li>
       <li (click)="isMenuOpen = false; logout()">
         <a><i class="fa fa-sign-out"></i> Logout</a>
