update header logo size and image path; adjust asset configuration in angular.json

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header *ngIf="this.isLoggedIn()">
   <div class="logo">
     <!-- <h1><a routerLink="/">Smart Devices Store</a></h1> -->
-    <a routerLink="/"><img src="/assets/img/logo.png" alt="logo" /></a>
+    <a routerLink="/"><img src="/assets/image/logo.jpg" alt="logo" /></a>
   </div>
   <nav>
     <span class="icon" id="menu-icon" (click)="toggleMenu()">
