--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -4,9 +4,98 @@
 
 <div class="profile-container main-container" *ngIf="!loading && userProfile">
   <h1>{{ userProfile.firstName }} {{ userProfile.lastName }}</h1>
-  <h1><small><h6>&#64;{{ userProfile.userName }}</h6></small></h1>
+  <h1>
+    <small
+      ><h6>&#64;{{ userProfile.userName }}</h6></small
+    >
+  </h1>
   <p><strong>Email:</strong> {{ userProfile.email }}</p>
   <p><strong>Role:</strong> {{ userProfile.role }}</p>
+  <div class="profile-buttons">
+    <button (click)="toggleEditForm()" class="edit-btn">Edit Profile</button>
+    <button class="delete-btn">Delete Account</button>
+  </div>
+  <form
+    *ngIf="updateMode"
+    [formGroup]="updateProfileForm"
+    (ngSubmit)="onUpdateProfile()"
+    class="update-form"
+  >
+    <div class="form-group">
+      <div class="data">
+        <label for="firstName">First Name:</label>
+        <input
+          type="text"
+          id="firstName"
+          formControlName="firstName"
+          [ngClass]="{
+            'is-invalid':
+              updateProfileForm.get('firstName')?.invalid &&
+              updateProfileForm.get('firstName')?.touched
+          }"
+        />
+      </div>
+
+      <div
+        class="error-message"
+        *ngIf="
+          updateProfileForm.get('firstName')?.invalid &&
+          updateProfileForm.get('firstName')?.touched
+        "
+      >
+        <small *ngIf="updateProfileForm.get('firstName')?.errors?.['required']">
+          First Name is required.
+        </small>
+        <small
+          *ngIf="updateProfileForm.get('firstName')?.errors?.['minlength']"
+        >
+          Must be at least 3 characters.
+        </small>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="data">
+        <label for="lastName">Last Name:</label>
+        <input
+          type="text"
+          id="lastName"
+          formControlName="lastName"
+          [ngClass]="{
+            'is-invalid':
+              updateProfileForm.get('lastName')?.invalid &&
+              updateProfileForm.get('lastName')?.touched
+          }"
+        />
+      </div>
+
+      <div
+        class="error-message"
+        *ngIf="
+          updateProfileForm.get('lastName')?.invalid &&
+          updateProfileForm.get('lastName')?.touched
+        "
+      >
+        <small *ngIf="updateProfileForm.get('lastName')?.errors?.['required']">
+          Last Name is required.
+        </small>
+        <small *ngIf="updateProfileForm.get('lastName')?.errors?.['minlength']">
+          Must be at least 3 characters.
+        </small>
+      </div>
+    </div>
+    <div class="profile-buttons">
+      <button
+        type="submit"
+        class="save-btn"
+        [disabled]="updateProfileForm.invalid"
+      >
+        Save
+      </button>
+      <button type="button" (click)="cancelEditForm()" class="cancel-btn">
+        Cancel
+      </button>
+    </div>
+  </form>
 </div>
 
 <div *ngIf="!loading && !userProfile" class="error main-container">
