--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -5,8 +5,8 @@
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 500px;
-  font-family: 'Arial', sans-serif;
-
+  font-family: "Arial", sans-serif;
+  transition: 0.3s;
   h1 {
     text-align: center;
     font-size: 24px;
@@ -45,19 +45,125 @@
     color: #dc3545;
   }
 }
+.profile-buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  margin: auto;
+  gap: 20px;
+  margin-top: 20px;
+  .edit-btn,
+  .delete-btn {
+    padding: 10px 15px;
+    width: 40%;
+    font-size: 14px;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+  .edit-btn {
+    background-color: #007bff;
+    &:hover {
+      background-color: #0056b3;
+    }
+  }
+  .delete-btn {
+    background-color: #dc3545;
+    &:hover {
+      background-color: #b71c1c;
+    }
+  }
+}
+
+.update-form {
+  margin: 20px 0;
+  .form-group {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .data {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      label {
+        font-size: 16px;
+        font-weight: bold;
+        width: 80%;
+        max-width: 100px;
+      }
+
+      input {
+        width: 100%;
+        padding: 8px;
+        margin-top: 5px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        flex-grow: 1;
+
+        &.is-invalid {
+          border-color: #dc3545;
+        }
+      }
+    }
+
+    .error-message {
+      color: #dc3545;
+      font-size: 12px;
+    }
+  }
+  .save-btn,
+  .cancel-btn {
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 80%;
+    transition: 0.2s;
+  }
+  .save-btn {
+    background-color: #007bff;
+    &:disabled {
+      background-color: #6c757d;
+      cursor: not-allowed;
+    }
+    &:hover {
+      background-color: #0056b3;
+    }
+  }
+
+  .cancel-btn {
+    background-color: #dc3545;
+    &:hover {
+      background-color: #c82333;
+    }
+  }
+}
 
 /* Adding some responsive styling */
 @media (max-width: 600px) {
   .profile-container {
     padding: 15px;
-    margin: 10px;
+    margin: 10px auto;
+    h1 {
+      font-size: 20px;
+    }
+    p {
+      font-size: 14px;
+    }
   }
-
-  .profile-container h1 {
-    font-size: 20px;
+  .profile-buttons {
+    flex-direction: column;
+    align-items: center;
+    .edit-btn,
+    .delete-btn {
+      width: 80%;
+    }
   }
-
-  .profile-container p {
-    font-size: 14px;
+  .data {
+    flex-direction: column;
   }
 }
