--- a/src/styles.scss
+++ b/src/styles.scss
@@ -204,3 +204,6 @@ main {
     opacity: 1;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
