--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
     </span>
     <ul id="nav-menu" [class.show]="isMenuOpen">
       <li (click)="isMenuOpen = false"><a routerLink="/home">Home</a></li>
-      <li (click)="isMenuOpen = false"><a routerLink="/about">Search</a></li>
+      <li (click)="isMenuOpen = false"><a routerLink="/search">Search</a></li>
       <li (click)="isMenuOpen = false">
         <a routerLink="/contact"><i class="fa fa-user-tie"></i> {{ firstName || 'Profile' }}</a>
       </li>
