--- a/src/app/components/search-users/search-users.component.scss
+++ b/src/app/components/search-users/search-users.component.scss
@@ -49,6 +49,12 @@
       margin: 0.5rem 0;
       text-align: left;
       background-color: #f9f9f9;
+      transition: 0.3s;
+      // add hover effect and shadow
+      &:hover {
+        background-color: #e9e9e9;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
 
       h3 {
         margin: 0 0 0.5rem;
@@ -74,6 +80,10 @@
     background-color: #007bff;
     color: white;
     cursor: pointer;
+    transition: 0.3s;
+    &:hover {
+      background-color: #0069d9;
+      }
 
     &:disabled {
       background-color: #ccc;
