add user profile and not found components; implement routing for user profile and enhance error handling in profile service

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,9 @@
       <li (click)="isMenuOpen = false"><a routerLink="/home">Home</a></li>
       <li (click)="isMenuOpen = false"><a routerLink="/search">Search</a></li>
       <li (click)="isMenuOpen = false">
-        <a routerLink="/contact"><i class="fa fa-user-tie"></i> {{ firstName || 'Profile' }}</a>
+        <a routerLink="/profile"
+          ><i class="fa fa-user-tie"></i> {{ firstName || "Profile" }}</a
+        >
       </li>
       <li (click)="isMenuOpen = false; logout()">
         <a><i class="fa fa-sign-out"></i> Logout</a>
