add post and home components and the postService; implement homeComponent with HTML, SCSS, and service integration for displaying blog posts

--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -5,6 +5,6 @@
       <h1><span>4</span><span>0</span><span>4</span></h1>
     </div>
     <h2>we are sorry, but the page you requested was not found</h2>
-    <a href="/" class="back-home">Go Back to Homepage</a>
+    <a routerLink="/home" class="back-home">Go Back to Homepage</a>
   </div>
 </div>
