--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,27 +3,39 @@
   <div *ngIf="posts.length > 0; else noPosts" class="posts-grid">
     <div class="post-card" *ngFor="let post of posts">
       <h2 class="post-title">{{ post.title }}</h2>
-      <p class="post-author">By <a [routerLink]="['/user-profile']"
-            [queryParams]="{ username: post.authorName}">{{ post.authorName }}</a></p>
+      <p class="post-author">
+        By
+        <a
+          [routerLink]="['/user-profile']"
+          [queryParams]="{ username: post.authorName }"
+          >{{ post.authorName }}</a
+        >
+      </p>
       <p class="post-content">{{ post.content }}</p>
       <p class="post-date">
-        Created: {{ post.createdDate | date: 'medium' }}
+        Created: {{ post.createdDate | date : "medium" }}
         <span *ngIf="post.modifiedDate">
-          | Modified: {{ post.modifiedDate | date: 'medium' }}
+          | Modified: {{ post.modifiedDate | date : "medium" }}
         </span>
       </p>
       <button (click)="toggleComments(post.id)" class="btn-toggle-comments">
-        {{ post.showComments ? 'Hide Comments' : 'Show Comments' }}
+        {{ post.showComments ? "Hide Comments" : "Show Comments" }}
       </button>
 
       <div *ngIf="post.showComments" class="comments-section">
         <h3>Comments</h3>
         <div *ngIf="post.comments.length > 0; else noComments">
           <div *ngFor="let comment of post.comments" class="comment">
-            <p class="comment-user">{{ comment.userName }}</p>
+            <p class="comment-user">
+              <a
+                [routerLink]="['/user-profile']"
+                [queryParams]="{ username: comment.userName }"
+                >{{ comment.userName }}</a
+              >
+            </p>
             <p class="comment-content">{{ comment.content }}</p>
             <p class="comment-date">
-              {{ comment.createdDate | date: 'short' }}
+              {{ comment.createdDate | date : "short" }}
             </p>
           </div>
         </div>
