--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -143,6 +143,45 @@
   }
 }
 
+.user-posts {
+  margin-top: 20px;
+
+  h2 {
+    margin-bottom: 10px;
+    font-size: 1.5em;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      margin-bottom: 20px;
+      padding: 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+
+      h3 {
+        margin: 0 0 5px;
+        font-size: 1.2em;
+      }
+
+      p {
+        margin: 0 0 10px;
+      }
+
+      small {
+        color: #666;
+      }
+    }
+  }
+
+  .no-posts {
+    color: #999;
+    font-style: italic;
+  }
+}
+
 /* Adding some responsive styling */
 @media (max-width: 600px) {
   .profile-container {
