--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -6,6 +6,27 @@
     <p><strong>Username:</strong> {{ userProfile.userName }}</p>
     <p><strong>Email:</strong> {{ userProfile.email }}</p>
     <p><strong>Role:</strong> {{ userProfile.role }}</p>
+
+    <div *ngIf="posts.length > 0; else noPosts" class="user-posts">
+      <h2>User's Posts</h2>
+      <ul>
+        <li *ngFor="let post of posts">
+          <h3>{{ post.title }}</h3>
+          <p>{{ post.content }}</p>
+          <small>Published on {{ post.createdDate | date : "medium" }}</small>
+          <br />
+          <small>
+            <span *ngIf="post.modifiedDate">
+              | Modified: {{ post.modifiedDate | date : "medium" }}
+            </span>
+          </small>
+        </li>
+      </ul>
+    </div>
+
+    <ng-template #noPosts>
+      <p class="no-posts">This user has not authored any posts yet.</p>
+    </ng-template>
   </div>
 
   <div *ngIf="!loading && !userProfile" class="no-profile">
