--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -1,10 +1,13 @@
-$primary-color: #4CAF50;
+$primary-color: #4caf50;
 $secondary-color: #f44336;
+$light-gray: #f1f1f1; 
+$dark-gray: #6c757d;
 $text-color: #333;
 $background-color: #f9f9f9;
-$heading-font: 'Roboto', sans-serif;
-$body-font: 'Open Sans', sans-serif;
+$heading-font: "Roboto", sans-serif;
+$body-font: "Open Sans", sans-serif;
 $border-radius: 8px;
+
 .loader {
   font-family: $heading-font;
   font-size: 1.5rem;
@@ -23,7 +26,7 @@ $border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   width: 100%;
-  margin:20px auto;
+  margin: 20px auto;
   text-align: center;
   animation: fadeIn 1s ease-in-out;
 
@@ -57,6 +60,55 @@ $border-radius: 8px;
   p {
     font-size: 1.1rem;
     color: $secondary-color;
+  }
+}
+.user-posts {
+  margin-top: 40px;
+
+  h2 {
+    font-size: 1.6em;
+    margin-bottom: 20px;
+    color: $primary-color;
+    font-weight: bold;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      background-color: $light-gray;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+
+      h3 {
+        margin: 0 0 10px;
+        font-size: 1.3em;
+        color: #333;
+      }
+
+      p {
+        margin: 0 0 10px;
+        font-size: 1em;
+        color: #555;
+      }
+
+      small {
+        font-size: 0.9rem;
+        color: $dark-gray;
+      }
+    }
+  }
+
+  .no-posts {
+    text-align: center;
+    color: $dark-gray;
+    font-style: italic;
+    font-size: 1.2rem;
+    margin-top: 20px;
   }
 }
 @keyframes fadeIn {
