--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -96,7 +96,7 @@ body {
     background-color: $primary-color;
 
     &:hover {
-      background-color: darken($primary-color, 10%);
+      background-color: $primary-color;
     }
   }
 
@@ -104,7 +104,7 @@ body {
     background-color: $danger-color;
 
     &:hover {
-      background-color: darken($danger-color, 10%);
+      background-color: $danger-color;
     }
   }
 }
@@ -175,7 +175,7 @@ body {
     }
 
     &:hover {
-      background-color: darken($primary-color, 10%);
+      background-color: $primary-color;
     }
   }
 
@@ -183,7 +183,7 @@ body {
     background-color: $danger-color;
 
     &:hover {
-      background-color: darken($danger-color, 10%);
+      background-color: $danger-color;
     }
   }
 }
