--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main-container">
   <h1 class="heading">Blog Posts</h1>
   <div *ngIf="posts.length > 0; else noPosts" class="posts-grid">
     <div class="post-card" *ngFor="let post of posts">
