--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -98,21 +98,44 @@
       </button>
     </div>
   </form>
-  <div *ngIf="posts.length > 0; else noPosts" class="user-posts">
+  <div *ngIf="posts.length > 0; else noPosts" class="posts-grid">
     <h2>User's Posts</h2>
-    <ul>
-      <li *ngFor="let post of posts">
-        <h3>{{ post.title }}</h3>
-        <p>{{ post.content }}</p>
-        <small>Published on {{ post.createdDate | date : "medium" }}</small>
-        <br>
-        <small>
-          <span *ngIf="post.modifiedDate">
-            | Modified: {{ post.modifiedDate | date : "medium" }}
-          </span>
-        </small>
-      </li>
-    </ul>
+    <div class="post-card" *ngFor="let post of posts">
+      <h2 class="post-title">
+        <a [routerLink]="['/post']" [queryParams]="{ postId: post.id }">
+          {{ post.title }}
+        </a>
+      </h2>
+      <p class="post-content">{{ post.content }}</p>
+      <p class="post-date">
+        Created: {{ post.createdDate | date : "medium" }}
+        <span *ngIf="post.modifiedDate">
+          | Modified: {{ post.modifiedDate | date : "medium" }}
+        </span>
+      </p>
+
+      <div  class="comments-section">
+        <h3>Comments</h3>
+        <div *ngIf="post.comments.length > 0; else noComments">
+          <div *ngFor="let comment of post.comments" class="comment">
+            <p class="comment-user">
+              <a
+                [routerLink]="['/user-profile']"
+                [queryParams]="{ username: comment.userName }"
+                >{{ comment.userName }}</a
+              >
+            </p>
+            <p class="comment-content">{{ comment.content }}</p>
+            <p class="comment-date">
+              {{ comment.createdDate | date : "short" }}
+            </p>
+          </div>
+        </div>
+        <ng-template #noComments>
+          <p class="no-comments">No comments yet.</p>
+        </ng-template>
+      </div>
+    </div>
   </div>
 
   <ng-template #noPosts>
@@ -123,3 +146,4 @@
 <div *ngIf="!loading && !userProfile" class="error main-container">
   Failed to load profile. Please try again later.
 </div>
+
