--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -3,25 +3,52 @@
 
   <div *ngIf="!loading && userProfile" class="user-profile">
     <h2>{{ userProfile.firstName }} {{ userProfile.lastName }}</h2>
-    <p><strong>Username:</strong> {{ userProfile.userName }}</p>
+    <h2>
+      <small
+        ><h6>&#64;{{ userProfile.userName }}</h6></small
+      >
+    </h2>
     <p><strong>Email:</strong> {{ userProfile.email }}</p>
     <p><strong>Role:</strong> {{ userProfile.role }}</p>
 
-    <div *ngIf="posts.length > 0; else noPosts" class="user-posts">
+    <div *ngIf="posts.length > 0; else noPosts" class="posts-grid">
       <h2>User's Posts</h2>
-      <ul>
-        <li *ngFor="let post of posts">
-          <h3>{{ post.title }}</h3>
-          <p>{{ post.content }}</p>
-          <small>Published on {{ post.createdDate | date : "medium" }}</small>
-          <br />
-          <small>
-            <span *ngIf="post.modifiedDate">
-              | Modified: {{ post.modifiedDate | date : "medium" }}
-            </span>
-          </small>
-        </li>
-      </ul>
+      <div class="post-card" *ngFor="let post of posts">
+        <h2 class="post-title">
+          <a [routerLink]="['/post']" [queryParams]="{ postId: post.id }">
+            {{ post.title }}
+          </a>
+        </h2>
+        <p class="post-content">{{ post.content }}</p>
+        <p class="post-date">
+          Created: {{ post.createdDate | date : "medium" }}
+          <span *ngIf="post.modifiedDate">
+            | Modified: {{ post.modifiedDate | date : "medium" }}
+          </span>
+        </p>
+
+        <div class="comments-section">
+          <h3>Comments</h3>
+          <div *ngIf="post.comments.length > 0; else noComments">
+            <div *ngFor="let comment of post.comments" class="comment">
+              <p class="comment-user">
+                <a
+                  [routerLink]="['/user-profile']"
+                  [queryParams]="{ username: comment.userName }"
+                  >{{ comment.userName }}</a
+                >
+              </p>
+              <p class="comment-content">{{ comment.content }}</p>
+              <p class="comment-date">
+                {{ comment.createdDate | date : "short" }}
+              </p>
+            </div>
+          </div>
+          <ng-template #noComments>
+            <p class="no-comments">No comments yet.</p>
+          </ng-template>
+        </div>
+      </div>
     </div>
 
     <ng-template #noPosts>
