--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,11 +8,10 @@
         </a>
       </h2>
       <p class="post-author">
-        By
         <a
           [routerLink]="['/user-profile']"
           [queryParams]="{ username: post.authorName }"
-          >{{ post.authorName }}</a
+          >&#64;{{ post.authorName }}</a
         >
       </p>
       <p class="post-content">{{ post.content }}</p>
