--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -22,7 +22,7 @@
 
       <div class="comments-section">
         <h3>Comments</h3>
-        <!-- <div class="comment-form">
+        <div class="comment-form">
           <form [formGroup]="commentForm" (ngSubmit)="onAddComment()">
             <textarea
               formControlName="content"
@@ -39,7 +39,7 @@
               Submit Comment
             </button>
           </form>
-        </div> -->
+        </div>
         <div *ngIf="comments.length > 0; else noComments">
           <div *ngFor="let comment of comments" class="comment">
             <p class="comment-user">
