--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -18,6 +18,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     min-height: 100px;
+    resize: none;
     transition: border-color 0.3s ease;
 
     &:focus {
