--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,6 +1,12 @@
 <div class="main-container">
   <div class="posts-grid">
     <div class="post-card" *ngIf="!isLoading; else loadingPost">
+      <button
+        (click)="onDeletePost(post.id)"
+        *ngIf="userName === post.authorName"
+      >
+        Delete the Post
+      </button>
       <h2 class="post-title">
         {{ post.title }}
       </h2>
@@ -64,6 +70,15 @@
             <p class="comment-date">
               {{ comment.createdDate | date : "short" }}
             </p>
+            <button
+              class="delete-button"
+              (click)="onDeleteComment(comment.commentId)"
+              *ngIf="
+                comment.userName === userName || post.authorName === userName
+              "
+            >
+              Delete
+            </button>
           </div>
         </div>
         <ng-template #noComments>
